--- a/lab01b/app/src/main/res/layout/activity_main.xml
+++ b/lab01b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,15 @@
         android:id="@+id/count_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FAF9F6"
         android:text=""
+        android:textColor="#FAF9F6"
         android:textSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.748" />
+        app:layout_constraintVertical_bias="0.793" />
 
     <Button
         android:id="@+id/increment_button"
@@ -59,5 +59,19 @@
         android:text="@string/decrement"
         app:backgroundTint="#E93CAC"
         />
+
+    <Button
+        android:id="@+id/reset_button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:onClick="reset"
+        android:text="Reset"
+        app:backgroundTint="#1E22AA"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/increment_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
